Created Hero component, sanity schema,types, integrated to home page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/types": "^2.0.13",
+    "@sanity/color-input": "^4.0.3",
     "@sanity/vision": "^3.78.1",
     "next": "15.2.1",
     "next-sanity": "^9.9.0",
