--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@portabletext/types": "^2.0.13",
     "@sanity/color-input": "^4.0.3",
+    "@sanity/ui": "^2.15.7",
     "@sanity/vision": "^3.78.1",
     "next": "15.2.1",
     "next-sanity": "^9.9.0",
