--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-sanity": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sanity": "^3.78.1"
   },
   "devDependencies": {
